Added tests for multiple files
Added tests for AppointmentCommand.java, SampleDataUtil.java
and PersonCard.java